--- a/packages/client/config/app.ini
+++ b/packages/client/config/app.ini
@@ -29,3 +29,8 @@ Password = 123456
 Host = 127.0.0.1:3306
 Name = hd_client
 TablePrefix = blog_
+
+# redis
+RedisHost = 81.68.72.227:6379
+# 失效时间， 单位为小时
+RedisExpire = 72
