feat: 添加文件上传接口

--- a/packages/common/config/app.ini
+++ b/packages/common/config/app.ini
@@ -17,6 +17,13 @@ LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
 
+# 文件上传
+AccessToken = **
+Owner = yanle-static
+Repository = static
+Path = hd-mall
+
+
 [server]
 RunMode = debug
 HttpPort = 8080
