--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ yarn-error.log*
 yarn.lock
 package-lock.json
 
-packages/admin/admin
-packages/client/client
+packages/admin/script/admin
+packages/client/script/client
